--- a/index.html
+++ b/index.html
@@ -6,31 +6,45 @@
     <title>zoo</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>
-        Please fill out this form<br>
-    </h1>
-    <div>
-        <form>
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <p>
-                Choose your favorite animal 
-            </p>
-            <label for="chocolate">Monkey</label>
-            <input type="radio" required>
-            <label for="chocolate">Elephant</label>
-            <input type="radio">
-            <label for="chocolate">Zebra</label>
-            <input type="radio"><br><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required><br><br>
-            <div>
-                <br><br><input type="submit" id="submit">&#x1F44D;
+    <body>
+            <div class="marty">
+                <img src="marty.jpg">
             </div>
-        </form>
-
-</body>
+        </div>
+        <div class="center-piece">
+            <h1>
+                Please fill out this form<br>
+            </h1>
+            <form class="align">
+                <label for="fname">First name</label><br>
+                <input type="text" id="fname" name="fname" placeholder="Martin"><br><br>
+                <label for="lname">Last name</label><br>
+                <input type="text" id="lname" name="lname" placeholder="Luther"><br><br>
+                <p>
+                    <strong>Choose your favorite animal:</strong> 
+                </p>
+                <label for="chocolate">Monkey</label>
+                <input type="radio" required>
+                <label for="chocolate">Elephant</label>
+                <input type="radio">
+                <label for="chocolate">Zebra</label>
+                <input type="radio"><br><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required 
+                    placeholder="example@mail.com"><br><br>
+                <div>
+                    <div></div>
+                    <br><br><input type="submit" id="submit" value="Submit">&#x1F44D;
+                </div>
+                </div>
+            </form>
+            <div>
+                <img src="giraffe_360.jpg" class="giraffe">
+            </div>
+            <div>
+                <img src="monkey_720.jpg" class="monkey">
+            </div>
+        </div>
+        
+    </body>
 </html>
