background and form centered

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
                 </div>
                 </div>
             </form>
-            <div>
+            <div class="padding">
                 <img src="giraffe_360.jpg" class="giraffe">
-            </div>
-            <div>
+
                 <img src="monkey_720.jpg" class="monkey">
             </div>
         </div>
