ready for presentation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
             <div class="marty">
-                <img src="marty.jpg">
+                <img src="marty.jpg" alt="zebra">
             </div>
         </div>
         <div class="center-piece">
@@ -17,21 +17,21 @@
             </h1>
             <form class="align">
                 <label for="fname">First name</label><br>
-                <input type="text" id="fname" name="fname" placeholder="Martin"><br><br>
+                <input type="text" id="fname" name="fname" placeholder="Martin" required><br><br>
                 <label for="lname">Last name</label><br>
-                <input type="text" id="lname" name="lname" placeholder="Luther"><br><br>
+                <input type="text" id="lname" name="lname" placeholder="Luther" required><br><br>
                 <p>
                     <strong>Choose your favorite animal:</strong> 
                 </p>
-                <label for="chocolate">Monkey</label>
-                <input type="radio" required>
-                <label for="chocolate">Elephant</label>
+                <label for="Monkey">Monkey</label>
                 <input type="radio">
-                <label for="chocolate">Zebra</label>
+                <label for="Giraffe">Giraffe</label>
+                <input type="radio">
+                <label for="Zebra">Zebra</label>
                 <input type="radio"><br><br><br>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required 
-                    placeholder="example@mail.com"><br><br>
+                <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                    required placeholder="example@mail.com"><br><br>
                 <div>
                     <div></div>
                     <br><br><input type="submit" id="submit" value="Submit">&#x1F44D;
@@ -39,9 +39,9 @@
                 </div>
             </form>
             <div class="padding">
-                <img src="giraffe_360.jpg" class="giraffe">
+                <img src="giraffe_360.jpg" class="giraffe" alt="giraffe">
 
-                <img src="monkey_720.jpg" class="monkey">
+                <img src="monkey_720.jpg" class="monkey" alt="monkey">
             </div>
         </div>
         
